Typo: LaTeX/XML formatting in Exercise VS.T10 (Chris Spalding)
Typo: Sage SUTH0, "row space of a matrix by the rows" (Jenna Fontaine)
Typo: Theorem CRN, proof, "Theorem BNS provides a basis" (Jenna Fontaine)
Typo: Theorem CRN, proof, "column without a leading 1" (Jenna Fontaine)
Typo: Subsection PD.GT, "the construction of a basis" (Jenna Fontaine)
Typo: Sage DMS, double "we" (Michael DuBois)

v3.11 2013/10/21
~~~~~~~~~~~~~~~~
Edit: Minor edits in Sections WILA, SSLE, RREF, TSS, HSE, NM
Edit: Minor edits in Section VO, LC, SS, LI, LDS, O
Edit: Minor edits in Section MO, MM, MISLE, MINM, CRS, FS
Edit: Extended slightly the conclusion of Theorem HSC
Edit: Sage CNIP, removed obsolete discussion (Michael DuBois)
Edit: Stronger finish to proof of Theorem TT (Anna Dovzhik)
Edit: Wording in Exercise MM.T52 (Dan Drake)
Edit: Section VS, added a semi-colon (Gavin Tranter)
Edit: Theorem HMIP, more Theorem EMMVP motivation (Anna Dovzhik)
Change: Theorem ISRN demoted to Exercise TSS.T11
Change: Prefer "pivot columns" over "leading 1", Chapter SLE, V, M
Change: Diagram DTSLS, use Theorem CSRN rather than FVCS (Chris Beaulaurier)
Typo: C^n in statement of Theorem SLSLC
Typo: Section LI, "scenees" (Jenna Fontaine)
Typo: Section LI, "in linearly independent" (Becky Hanscam)
Typo: Example LDRN, use Theorem LIVRN as justification (Anna Dovzhik)
Typo: Sage RLD, "nest" to "next" (Gavin Tranter)
Typo: Theorem OSLI, "nozero" to "nonzero"  (Anna Dovzhik)
Typo: Solution LDS.T55, B should be C at very end (Chris Spalding)
Typo: LaTeX/XML formatting in Solution LDS.T40 (Vladimir Yelkhimov)
Typo: Property ZM of Theorem VSPM, matrix, not vector (Michael DuBois)
Typo: LaTeX/XML formatting in Exercise MO.C10 (Anna Dovzhik, Dan Drake)
Typo: LaTeX/XML formatting in Theorem HMIP (Anna Dovzhik)
Typo: LaTeX/XML formatting in Theorem TTMI (Gavin Tranter)
Typo: Sage MISLE, "fuill" to "full" (Gavin Tranter)
Typo: Sage MO, "conjugage" to "conjugate" (Anna Dovzhik)