@@ -733,14 +733,14 @@ and from this we conclude that the only solution is $a_1=a_2=a_3=0$.  Since the 
 <problem contributor="robertbeezer">In the crazy vector space $C$ (<acroref type="example" acro="CVS" />), is the set
 $S=\set{(0,\,2),\ (2,\,8)}$ linearly independent?
 </problem>
-<solution contributor="robertbeezer">We begin with a relation of linear dependence using unknown scalars $a$ and $b$.  We wish to know if these scalars <em>must</em> both be zero.  Recall that the zero vector in $C$ is $(-1,\,-1)$ and that the definitions of vector addition and scalar multiplication are not what we might expect.
+<solution contributor="robertbeezer">We begin with a relation of linear dependence using unknown scalars $a$ and $b$.  We wish to know if these scalars <em>must</em> both be zero.  Recall that the zero vector in $C$ is $(-1,\,-1)$ and that the definitions of vector addition and scalar multiplication in <acroref type="example" acro="CVS" /> are not what we might expect.
 <alignmath>
 \zerovector
 <![CDATA[&=(-1,\,-1)\\]]>
 <![CDATA[&=a(0,\,2) +b(2,\,8)&&]]><acroref type="definition" acro="RLD" />\\
-<![CDATA[&=(0a+a-1,\,2a+a-1) + (2b+b-1,\,8b+b-1)&&]]>\text{Scalar mult., <acroref type="example" acro="CVS" />}\\
+<![CDATA[&=(0a+a-1,\,2a+a-1) + (2b+b-1,\,8b+b-1)&&]]><acroref type="example" acro="CVS" />\\
 <![CDATA[&=(a-1,\,3a-1) + (3b-1,\,9b-1)\\]]>
-<![CDATA[&=(a-1+3b-1+1,\,3a-1+9b-1+1)&&]]>\text{Vector addition, <acroref type="example" acro="CVS" />}\\
+<![CDATA[&=(a-1+3b-1+1,\,3a-1+9b-1+1)&&]]><acroref type="example" acro="CVS" />\\
 <![CDATA[&=(a+3b-1,\,3a+9b-1)\\]]>
 </alignmath>
 From this we obtain two equalities, which can be converted to a homogeneous system of equations,
