@@ -10,6 +10,7 @@ Typo: Theorem CRN, proof, "Theorem BNS provides a basis" (Jenna Fontaine)
 Typo: Theorem CRN, proof, "column without a leading 1" (Jenna Fontaine)
 Typo: Subsection PD.GT, "the construction of a basis" (Jenna Fontaine)
 Typo: Sage DMS, double "we" (Michael DuBois)
+Typo: LaTeX/XML formatting in Solution LISS.C21 (Chris Spalding, Paul Makl)
 
 v3.11 2013/10/21
 ~~~~~~~~~~~~~~~~
